# SEP

archived_code/dcm/: wrap.hpp
model/include/sep/: resource.hpp
previously_in_test/dcm/: dcm.hpp
screengrabs/test/model/include/sep/: resource.hpp
screengrabs/test/other_dcm/: ECS_dcm.cpp  ECS_dcm.hpp  dcm.hpp  ecs_tags.hpp  wrap.cpp  wrap.hpp
test/: CMakeLists.txt
test/model/include/sep/: device_capability.hpp  flow_reservation_response.hpp  resource.hpp
test/other_dcm/: CMakeLists.txt  ECS_dcm.cpp  ECS_dcm.hpp  dcm.hpp  dcm_test.cpp  ecs_tags.hpp  main.cpp  wrap.hpp
